--- a/sumeetmohite.html
+++ b/sumeetmohite.html
@@ -10,7 +10,7 @@
   <style>
     .main-container {
       border: 2px solid black;
-      margin: 4rem;
+      margin: 5rem 4rem;
       padding: 1.5rem;
     }
 
@@ -37,15 +37,22 @@
       border: none;
       padding: 0.5rem;
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 1.2rem;
       width: 5rem;
       margin: 0 1.25rem;
+    }
+    .btn:hover{
+      background: rgb(0, 185, 0);
     }
 
     .box {
       height: 6rem;
       width: 100%;
       border: 2px solid black;
+      border-right: none;
+    }
+    #s3-r0-c1,#s3-r1-c1,#s3-r2-c1,#s3-r3-c1{
+      border-right:2px solid black;
     }
   </style>
 
